# rust-macro-demo

./: Cargo.toml  readme.md
error-info/: Cargo.toml
error-info-derive/: Cargo.toml
error-info-derive/src/: enum_from_daring.rs  erro_info.rs  lib.rs
error-info/examples/: my_error.rs
error-info/src/: lib.rs
examples/: eum_from_daring.rs  my_marco.rs  my_try.rs
src/: lib.rs  main.rs
