[package]
name = "rust-marco-demo"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
proc-macro2 = "1.0.82"
quote = "1.0.36"
syn = {version="2.0.61",features = ["extra-traits"]}
