[workspace]
members = ["error-info","error-info-derive"]
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html\
[workspace.dependencies]
error-info = { path = "./error-info" }
error-info-derive = { path = "./error-info-derive" }
anyhow = "1.0.83"
darling = "0.20.8"
proc-macro2 = "1.0.82"
quote = "1.0.36"
syn = {version="2.0.61",features = ["extra-traits"]}
